# q2-protein-pca

./: .coveragerc  .gitattributes  .gitignore  01_alignment.py  02_ranking.py  03_pca.py  MANIFEST.in  Makefile  Pipfile  ProtPCA.py  README.md  run.py  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  main.yml
ProtPCA/: alignment.py  arguments.py  exceptions.py  helpers.py  pca.py  ranking.py
ci/recipe/: meta.yaml
config/: ProtPCA.cfg  ProtPCA.spec
protein_pca/: alignment.py  arguments.py  exceptions.py  helpers.py  pca.py  ranking.py
q2_protein_pca/: __init__.py  _alignment.py  _format.py  _pca.py  _plot.py  _ranking.py  _transformer.py  _type.py  _version.py  citations.bib  plugin_setup.py
q2_protein_pca/archived/: pca.py
q2_protein_pca/assets/: index.html
q2_protein_pca/assets/loadings/: index.html
q2_protein_pca/tests/: test_alignment.py  test_helpers.py  test_pca.py  test_plot.py  test_ranking.py  test_transformer.py
q2_protein_pca/tests/data/: aligned-protein-pca-loadings-1.txt  aligned-protein-pca-scores-1.txt  aligned-protein-ranks-1.csv  aligned-protein-sequences-2.fasta  aligned-protein-sequences-3.fasta  expected_spec.py  positions-mapping-1.csv  positions-mapping-2.csv  (+7 more)
ranking/: Cargo.toml  pyproject.toml
ranking/src/: lib.rs
sample_data/: accession_ids.txt  sample-ranks.csv  sample.fasta  thioredoxin-metadata.tsv  thioredoxin-seqs.fasta  thioredoxins-seqs.fasta
sample_data/copies/: thioredoxin-metadata.tsv  thioredoxin-seqs.fasta
test/: expected_ranks.csv  test_data.csv  test_helpers.py
test/assets/: expected_ranks.csv
(+5 files in other folders)
